--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Etch a Sketch</title>
+	<title>Etch-a-Sketch</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="styles.css">
 	
@@ -23,7 +23,12 @@
 				<button>Reset</button>
 			</div>
 			<div>
-				<input type="text" placeholder="Size of Board" value="16">
+				<input 
+					type="text" 
+					placeholder="Size of Board" 
+					value="16"
+					onchange="changeSize(this.value)"
+					>
 				<button>Set Size</button>
 			</div>
 		</div>
