--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Etch-a-Sketch</title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="styles.css">
-	
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<script src="js/script.js" defer></script>
 </head>
 <body>
 	<div class="flex-container">
@@ -34,5 +34,4 @@
 		</div>
 	</div>
 </body>
-<script src="main.js"></script>
 </html>
