--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		<div class="content">
 			<div class="board"></div>
 			<div class="buttons">
-				<button>Black</button>
-				<button>White</button>
-				<button>Random</button>
+				<button onclick="changeColor('black')">Black</button>
+				<button onclick="changeColor('gray')">Gray</button>
+				<button onclick="changeColor('random')">Random </button>
+				<button onclick="changeColor('white')">Erasor</button>
 				<button>Reset</button>
 			</div>
 			<div>
