Add reset button functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<button onclick="changeColor('gray')">Gray</button>
 				<button onclick="changeColor('random')">Random </button>
 				<button onclick="changeColor('white')">Erasor</button>
-				<button>Reset</button>
+				<button onclick="populateBoard(size)">Reset</button>
 			</div>
 			<div>
 				<input 
