--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<button onclick="changeColor('white')">Erasor</button>
 				<button onclick="populateBoard(size)">Reset</button>
 			</div>
-			<div>
+			<div class="board-size">
 				<input 
 					type="text" 
 					placeholder="Size of Board" 
