Add resetBoard func and Mode toggle

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 				<button onclick="changeColor('gray')">Gray</button>
 				<button onclick="changeColor('random')">Random </button>
 				<button onclick="changeColor('white')">Erasor</button>
-				<button onclick="populateBoard(size)">Reset</button>
+				<button onclick="resetBoard(size)">Reset</button>
 			</div>
+			<div class="mode">Mode: Coloring</div>
 			<div class="board-size">
 				<input 
 					type="text" 
