Add error display

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 					>
 				<button>Set Size</button>
 			</div>
+			<div class="error">
+				Input must be between 2 and 100.
+			</div>
 		</div>
 	</div>
 </body>
